--- a/src/styles/5-templates/_about.scss
+++ b/src/styles/5-templates/_about.scss
@@ -1,5 +1,25 @@
 .about{
-    text-align: center;
+    height:80vh;
     width: 90%;
-    margin: auto;
+    margin: 2em auto;
+    display: grid;
+    text-align: center;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-content: center;
+    .about__heading{
+        font-size: 2.5em;
+    }
+    .about__heading2{
+        font-size:.9em;
+        margin:.2em 0 1em 0;
+    }
+
+    .about__text{
+        font-size: 1.1em;
+    }
+    img{
+        margin: 2em auto;
+
+    }
 }
