--- a/src/styles/5-templates/_about.scss
+++ b/src/styles/5-templates/_about.scss
@@ -7,19 +7,30 @@
     grid-template-columns: 1fr;
     justify-content: center;
     align-content: center;
+    @include mini-laptop{
+        width: 70%;
+    }
     .about__heading{
-        font-size: 2.5em;
+        font-size: 3em;
+        margin:.3em;
+        @include mini-laptop{
+            font-size: 2.5em;
+        }
     }
-    .about__heading2{
-        font-size:.9em;
-        margin:.2em 0 1em 0;
-    }
+   
 
     .about__text{
-        font-size: 1.1em;
+        font-size: .9em;
+        font-family: font("font1");
+        @include mini-laptop{
+            font-size: .8em;
+        }
     }
     img{
         margin: 2em auto;
-
+        width:30%;
+        @include mini-laptop{
+            width: 50%;
+        }
     }
 }
