--- a/src/styles/5-templates/_about.scss
+++ b/src/styles/5-templates/_about.scss
@@ -3,34 +3,46 @@
     width: 90%;
     margin: 2em auto;
     display: grid;
-    text-align: center;
+  
     grid-template-columns: 1fr;
     justify-content: center;
     align-content: center;
     @include mini-laptop{
         width: 70%;
     }
+    @include tablet{
+        text-align: center;
+    }
     .about__heading{
-        font-size: 3em;
-        margin:.3em;
+        font-size: 5em;
+        margin:.3em 0;
         @include mini-laptop{
-            font-size: 2.5em;
+            font-size: 3em;
+        }
+        @include tablet{
+            font-size: 2em;
         }
     }
    
 
     .about__text{
-        font-size: .9em;
+        font-size: 3em;
         font-family: font("font1");
         @include mini-laptop{
-            font-size: .8em;
+            font-size: 2em;
+        }
+        @include tablet{
+            font-size: 1.3em;
         }
     }
     img{
         margin: 2em auto;
         width:30%;
         @include mini-laptop{
-            width: 50%;
+            width: 70%;
+        }
+        @include tablet{
+            width: 60%;
         }
     }
 }
