2 column movie site

--- a/src/styles/5-templates/_movies.scss
+++ b/src/styles/5-templates/_movies.scss
@@ -1,6 +1,6 @@
 .movies{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-row-gap:3em;
     grid-column-gap: 1.5em;
     width:90%;
@@ -24,7 +24,8 @@
        
     
         .movies__item{
-       
+       display: grid;
+       grid-template-columns: 1fr 1fr;
   
             .movies__data{
                 padding:.5em;
