adding aditional info(vote,release,language,popularity), chaging color pallete

--- a/src/styles/1-helpers/_variables.scss
+++ b/src/styles/1-helpers/_variables.scss
@@ -1,7 +1,7 @@
 //COLLOR PALLETE
-$color1: #5AD2FA;
-$color2: #51BCE0 ;
-$color3: #439CBA;
+$color1: lighten(#00D474, 10%);
+$color2: black ;
+$color3: white;
 $color4: #2C677A;
 $color5: #16333D;
 
