--- a/src/styles/5-templates/_movies.scss
+++ b/src/styles/5-templates/_movies.scss
@@ -37,21 +37,37 @@
                         width: 40%;
                     }
                 }
-                .movies__title{
-                    font-size: 3em;
-                    margin:.5em 0;
-                    min-width: 40px;
-                    font-weight: bold;
-                    text-transform: uppercase;
+
+                .movies__description{
+                    padding:1em;
+                    .movies__title{
+                        font-size: 3em;
+                        margin:.5em 0;
+                        min-width: 40px;
+                        font-weight: bold;
+                        text-transform: uppercase;
+                    }
+                    .movies__overview{
+                        font-size: 1em;
+                        min-height: 120px; 
+                        font-family: font("font7");
+                        @include tablet{
+                            font-size: .8em;
+                            min-height: 100px; 
+                        } 
+                        
+                       
                 }
-                .movies__overview{
-                    font-size: 1em;
-                    min-height: 120px; 
-                    font-family: font("font7");
-                    @include tablet{
-                        font-size: .8em;
-                        min-height: 100px; 
-                    } 
+                .movies__stats{
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    .movies__stats-data{
+                        span{
+                            display: block;
+                            color: $color1;
+                        }
+                    }
+                }
                     
                     
                 }
