--- a/src/styles/5-templates/_movies.scss
+++ b/src/styles/5-templates/_movies.scss
@@ -2,11 +2,12 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-row-gap:3em;
+    background-color: black;
     grid-column-gap: 1.5em;
     width:90%;
     overflow: hidden;
     margin: 2em auto;
-    padding:3em 1em;
+
     @include mini-laptop{
         grid-template-columns: 1fr 1fr;
     }
@@ -16,10 +17,10 @@
         width:70%;
     }
     .movies__row{
-        border-radius: 5px;
+        border-radius: 10px;
   
         position: relative;
-        width: 80%;
+        width: 100%;
         margin: auto;
         height: auto;
        
@@ -43,14 +44,17 @@
                     .movies__title{
                         font-size: 3em;
                         margin:.5em 0;
+                        margin-top: 0;
                         min-width: 40px;
                         font-weight: bold;
                         text-transform: uppercase;
                     }
                     .movies__overview{
-                        font-size: 1em;
+                        font-size: 1.2em;
+                        margin:.5em 0;
                         min-height: 120px; 
-                        font-family: font("font7");
+                        font-family: font("font3");
+                        font-weight: lighter;
                         @include tablet{
                             font-size: .8em;
                             min-height: 100px; 
