hot module reloading

--- a/src/styles/5-templates/_movies.scss
+++ b/src/styles/5-templates/_movies.scss
@@ -65,6 +65,7 @@
                 .movies__stats{
                     font-size: 1.5em;
                     display: grid;
+                    grid-gap: .5em;
                     grid-template-columns: 1fr 1fr;
                     font-weight: lighter;
                     .movies__stats-data{
