removing search button

--- a/src/styles/5-templates/_searchBar.scss
+++ b/src/styles/5-templates/_searchBar.scss
@@ -1,11 +1,11 @@
 .search-bar{
     display: grid;
-    grid-template-columns: 10fr 2fr;
+    grid-template-columns: 1fr;
     align-content: center;
     justify-content: center;
     grid-gap: 1em;
     width:90%;
-    margin:  auto;
+    margin: 0 auto;
 
     @include mini-laptop{
         grid-template-columns: 8fr 2fr;
@@ -16,8 +16,7 @@
         width: 100%;
         padding:.5em;
         font-size: 1.5em;
-        margin:1em auto;
-      
+        margin:1em auto 0em auto;
         border: 1px solid rgb(231, 231, 231);
         border-radius: 5px;
         @include tablet{
@@ -26,22 +25,5 @@
 
     }
     
-    .search-bar__button{
-        width: 70%;
-        height: 50%;
-        border: none;
-        cursor: pointer;
-        border-radius: 3px;
-        text-transform: uppercase;
 
-        margin: 1.5em auto;
-        &:hover{
-            background-color: rgb(228, 228, 228);
-        }
-        @include tablet{
-            font-size: .8em;
-            margin: 1.2em auto;
-        }
-       
-    }
 }
