--- a/src/styles/5-templates/_searchBar.scss
+++ b/src/styles/5-templates/_searchBar.scss
@@ -13,12 +13,24 @@
     
  
     .search-bar__input{
-        width: 100%;
-        padding:.5em;
+        background-color: transparent;
+        padding:.5em 0;
         font-size: 1.5em;
         margin:1em auto 0em auto;
-        border: 1px solid rgb(231, 231, 231);
-        border-radius: 5px;
+        border: none;
+        border-bottom: 1px solid rgb(231, 231, 231);
+        width: 50%;
+        transition: .8s;
+        text-align: center;
+        &:hover{
+            color:white;
+        }
+      
+        &:focus{
+            width: 100%;
+            outline: none;
+        }
+    
         @include tablet{
             font-size: 1em;
         }
