--- a/src/styles/5-templates/_movies.scss
+++ b/src/styles/5-templates/_movies.scss
@@ -2,20 +2,27 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-row-gap:3em;
-    background-color: black;
+    background-color: rgba(0, 0, 0,0.9);
     grid-column-gap: 1.5em;
     width:90%;
-    overflow: hidden;
+    overflow: auto;
     margin: 2em auto;
+    border-radius: 5px;
 
-    @include mini-laptop{
-        grid-template-columns: 1fr 1fr;
+    @include large-desktop{
+    
     }
+   
+    @include laptop{
+       background-color: rgba(0, 0, 0,0.8);
+        width: 80%;
+    }
+    
     @include tablet{
-        grid-template-columns: 1fr;
-        text-align: center;
-        width:70%;
+      width: 90%;
     }
+ 
+
     .movies__row{
         position: relative;
         width: 100%;
@@ -27,17 +34,27 @@
             border-radius: 10px;
             display: grid;
             grid-template-columns: 5fr 7fr;
+            @include large-desktop{
+                grid-template-columns:4fr 8fr;
+            }
+            @include laptop{
+               grid-template-columns: 1fr;
+            }
          
   
             .movies__data{  
                 img{
                     width: 100%;
                     display: block;
-                  
-              
-                    @include tablet{
-                        width: 40%;
+                    grid-row: 2;
+                    @include laptop{
+                        display: none;
+                        width: 60%;
+                        margin: auto;
+                         
                     }
+              
+                   
                 }
 
                 .movies__description{
@@ -49,6 +66,15 @@
                         min-width: 40px;
                         font-weight: bold;
                         text-transform: uppercase;
+                        @include large-desktop{
+                            font-size:3.5em;
+                        }
+                        @include laptop{
+                          font-size: 2.5em;
+                        }
+                        @include tablet{
+                            font-size: 2em;
+                        }
                     }
                     .movies__overview{
                         font-size: 1.2em;
@@ -56,10 +82,12 @@
                         min-height: 120px; 
                         font-family: font("font3");
                         font-weight: lighter;
-                        @include tablet{
-                            font-size: .8em;
-                            min-height: 100px; 
-                        } 
+                        @include large-desktop{
+                            font-size: 1.3em;
+                        }
+                        @include laptop{
+                            font-size: 1em;
+                          }
                 }
 
 
@@ -67,6 +95,12 @@
                     font-weight: lighter;
                     font-size: 1.7em;
                     color:$color1;
+                    @include large-desktop{
+                        font-size: 1.9em;
+                    }
+                    @include laptop{
+                        font-size: 1.5em;
+                      }
                 }
 
                 .movies__stats{
@@ -75,6 +109,9 @@
                     grid-gap: .5em;
                     grid-template-columns: 1fr 1fr;
                     font-weight: lighter;
+                    @include laptop{
+                        font-size: 1.1em;
+                      }
                     .movies__stats-data{
                         a{
                             text-decoration: none;
@@ -84,6 +121,9 @@
                             font-size: 1.5em;
                             display: block;
                             color: $color1;
+                            @include laptop{
+                                font-size: 1.3em;
+                              }
                         }
                     }
                 }
