--- a/src/styles/5-templates/_searchBar.scss
+++ b/src/styles/5-templates/_searchBar.scss
@@ -23,9 +23,15 @@
             width: 100%;
             outline: none;
         }
+        @include large-desktop{
+            font-size:1.5em;
+        }
     
         @include tablet{
             font-size: 1em;
+        }
+        @include mini-laptop{
+            font-size: 1.3em;
         }
 
     }
