--- a/src/styles/5-templates/_movies.scss
+++ b/src/styles/5-templates/_movies.scss
@@ -1,166 +1,152 @@
-.movies{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-row-gap:3em;
-    background-color: rgba(0, 0, 0,0.9);
-    grid-column-gap: 1.5em;
-    width:90%;
-    overflow: auto;
-    margin: 2em auto;
-    border-radius: 5px;
+.movies {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 3em;
+  background-color: rgba(0, 0, 0, 0.9);
+  grid-column-gap: 1.5em;
+  width: 90%;
+  overflow: auto;
+  margin: 2em auto;
+  border-radius: 5px;
 
-    @include large-desktop{
-    
-    }
-   
-    @include laptop{
-       background-color: rgba(0, 0, 0,0.8);
-        width: 80%;
-    }
-    
-    @include tablet{
-      width: 90%;
-    }
- 
+  @include large-desktop {
+  }
 
-    .movies__row{
-        position: relative;
-        width: 100%;
-        margin: auto;
-        height: auto;
-       
-    
-        .movies__item{
-            border-radius: 10px;
+  @include laptop {
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 80%;
+  }
+
+  @include tablet {
+    width: 90%;
+  }
+
+  .movies__row {
+    position: relative;
+    width: 100%;
+    margin: auto;
+    height: auto;
+
+    .movies__item {
+      border-radius: 10px;
+      display: grid;
+      grid-template-columns: 5fr 7fr;
+      @include large-desktop {
+        grid-template-columns: 4fr 8fr;
+      }
+      @include laptop {
+        grid-template-columns: 1fr;
+      }
+
+      .movies__data {
+        img {
+          width: 100%;
+          display: block;
+          grid-row: 2;
+          @include laptop {
+            display: none;
+            width: 60%;
+            margin: auto;
+          }
+        }
+
+        .movies__description {
+          padding: 1em;
+          .movies__title {
+            font-size: 3em;
+            margin: 0.5em 0 0 0;
+            margin-top: 0;
+            min-width: 40px;
+            font-weight: bold;
+            text-transform: uppercase;
+            @include large-desktop {
+              font-size: 3.5em;
+            }
+            @include laptop {
+              font-size: 2.5em;
+            }
+            @include tablet {
+              font-size: 2em;
+            }
+          }
+          .movies__overview {
+            font-size: 3em;
+            margin: 0.5em 0;
+            min-height: 120px;
+            font-family: font("font3");
+            font-weight: lighter;
             display: grid;
-            grid-template-columns: 5fr 7fr;
-            @include large-desktop{
-                grid-template-columns:4fr 8fr;
+            align-content: center;
+            align-items: center;
+            @include large-desktop {
+              font-size: 1.3em;
             }
-            @include laptop{
-               grid-template-columns: 1fr;
+            @include laptop {
+              font-size: 1em;
             }
-         
-  
-            .movies__data{  
-                img{
-                    width: 100%;
-                    display: block;
-                    grid-row: 2;
-                    @include laptop{
-                        display: none;
-                        width: 60%;
-                        margin: auto;
-                         
-                    }
-              
-                   
-                }
+          }
 
-                .movies__description{
-                    padding:1em;
-                    .movies__title{
-                        font-size: 3em;
-                        margin:.5em 0 0 0;
-                        margin-top: 0;
-                        min-width: 40px;
-                        font-weight: bold;
-                        text-transform: uppercase;
-                        @include large-desktop{
-                            font-size:3.5em;
-                        }
-                        @include laptop{
-                          font-size: 2.5em;
-                        }
-                        @include tablet{
-                            font-size: 2em;
-                        }
-                    }
-                    .movies__overview{
-                        font-size: 1.2em;
-                        margin:.5em 0;
-                        min-height: 120px; 
-                        font-family: font("font3");
-                        font-weight: lighter;
-                        @include large-desktop{
-                            font-size: 1.3em;
-                        }
-                        @include laptop{
-                            font-size: 1em;
-                          }
-                }
-
-
-                .movies__meta{
-                    font-weight: lighter;
-                    font-size: 1.7em;
-                    color:$color1;
-                    @include large-desktop{
-                        font-size: 1.9em;
-                    }
-                    @include laptop{
-                        font-size: 1.5em;
-                      }
-                }
-
-                .movies__stats{
-                    font-size: 1.2em;
-                    display: grid;
-                    grid-gap: .5em;
-                    grid-template-columns: 1fr 1fr;
-                    font-weight: lighter;
-                    @include laptop{
-                        font-size: 1.1em;
-                      }
-                    .movies__stats-data{
-                        a{
-                            text-decoration: none;
-                           
-                        }
-                        span{
-                            font-size: 1.5em;
-                            display: block;
-                            color: $color1;
-                            @include laptop{
-                                font-size: 1.3em;
-                              }
-                        }
-                    }
-                }
-                    
-                    
-                }
-
-               
-
-               
+          .movies__meta {
+            font-weight: lighter;
+            font-size: 1.7em;
+            color: $color1;
+            @include large-desktop {
+              font-size: 1.9em;
             }
+            @include laptop {
+              font-size: 1.5em;
+            }
+          }
+
+          .movies__stats {
+            font-size: 1.9em;
+            display: grid;
+            grid-gap: 0.5em;
+            grid-template-columns: 1fr 1fr;
+            font-weight: lighter;
+            @include laptop {
+              font-size: 1.1em;
+            }
+            .movies__stats-data {
+              a {
+                text-decoration: none;
+              }
+              span {
+                font-size: 1.5em;
+                display: block;
+                color: $color1;
+                @include laptop {
+                  font-size: 1.3em;
+                }
+              }
+            }
+          }
         }
-
-        .movies__play-button, .movies__view-button{
-         
-            border: none;
-            padding:.5em;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: .3em;
-        }
-
-        .movies__play-button{
-            background-color: yellowgreen;
-            transition: .5s;
-         
-            &:hover{
-                background-color: red;
-                color: white;
-            }
-        }
-        .movies__view-button{
-           
-            &:hover{
-                background-color: rgb(228, 228, 228);
-               
-            }
-        }
+      }
     }
+
+    .movies__play-button,
+    .movies__view-button {
+      border: none;
+      padding: 0.5em;
+      border-radius: 5px;
+      cursor: pointer;
+      margin: 0.3em;
+    }
+
+    .movies__play-button {
+      background-color: yellowgreen;
+      transition: 0.5s;
+
+      &:hover {
+        background-color: red;
+        color: white;
+      }
+    }
+    .movies__view-button {
+      &:hover {
+        background-color: rgb(228, 228, 228);
+      }
+    }
+  }
 }
