--- a/src/styles/3-layout/_footer.scss
+++ b/src/styles/3-layout/_footer.scss
@@ -1,12 +1,9 @@
-.footer{
-    color: white;
-    background-color: black;
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    height: 8vh;
-    font-size: .8em;
-    @include laptop{
-        font-size: .7em;
-      }
+.footer {
+  color: white;
+  background-color: black;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  height: 8vh;
+  font-size: 2vw;
 }
