--- a/src/styles/5-templates/_movies.scss
+++ b/src/styles/5-templates/_movies.scss
@@ -34,16 +34,19 @@
       @include large-desktop {
         grid-template-columns: 4fr 8fr;
       }
-      @include laptop {
+      @include tablet {
         grid-template-columns: 1fr;
       }
 
       .movies__data {
+        display: grid;
+        align-items: center;
+        align-content: center;
         img {
-          width: 100%;
+          width: 35vw;
           display: block;
           grid-row: 2;
-          @include laptop {
+          @include tablet {
             display: none;
             width: 60%;
             margin: auto;
@@ -53,24 +56,18 @@
         .movies__description {
           padding: 1em;
           .movies__title {
-            font-size: 3em;
+            font-size: 3.5vw;
             margin: 0.5em 0 0 0;
             margin-top: 0;
             min-width: 40px;
             font-weight: bold;
             text-transform: uppercase;
-            @include large-desktop {
-              font-size: 3.5em;
-            }
-            @include laptop {
-              font-size: 2.5em;
-            }
             @include tablet {
-              font-size: 2em;
+              font-size: 1.2em;
             }
           }
           .movies__overview {
-            font-size: 3em;
+            font-size: 2vw;
             margin: 0.5em 0;
             min-height: 120px;
             font-family: font("font3");
@@ -78,11 +75,8 @@
             display: grid;
             align-content: center;
             align-items: center;
-            @include large-desktop {
-              font-size: 1.3em;
-            }
-            @include laptop {
-              font-size: 1em;
+            @include tablet {
+              font-size: 1.2em;
             }
           }
 
@@ -99,13 +93,13 @@
           }
 
           .movies__stats {
-            font-size: 1.9em;
+            font-size: 1.9vw;
             display: grid;
             grid-gap: 0.5em;
             grid-template-columns: 1fr 1fr;
             font-weight: lighter;
-            @include laptop {
-              font-size: 1.1em;
+            @include tablet {
+              font-size: 0.9em;
             }
             .movies__stats-data {
               a {
